squash! ef50c5de721d021a65a7713d4100f01e75fcd291

MDEV-32441 SENT_ROWS shows random wrong values when stored function
           is selected.
MDEV-32281 EXAMINED_ROWS is not populated in
           information_schema.processlist upon SELECT.

This commit also fixes some double accounting for
sent_rows and examined_rows.

To ensure that information_schema.processlist has correct values for
sent_rows and examined_rows I introduced two new variables to
hold the total count so far. This was needed as stored functions and
stored procedures will reset the normal counters to be able to count
rows for each statement individually for slow query log.

Other things:
- HANDLER operations now also supports send_rows and examined_rows.
- Removed JOIN::join_examined_rows
- As thd is always up to date with examined_rows, we do not need
  to handle examined row counting for unions or filesort.
- I renamed SORT_INFO::examined_rows to m_examined_rows to ensure that
  we don't get bugs in merges that tries to use examined_rows.
- Removed calls of type "thd->set_examined_row_count(0)" as they are
  not needed anymore.
- Made some functions that where called for each row inline.
- Removed not used functions:
  THD::set_examined_row_count()